Fix buttons overflow in the UI

--- a/ui/src/components/common/SpecEditor/style.css
+++ b/ui/src/components/common/SpecEditor/style.css
@@ -1,3 +1,7 @@
 .spec-editor-validation-message-icon {
   width: 3.125rem;
 }
+
+.spec-editor-status-message-wrapper {
+  text-overflow: ellipsis;
+}
